# tehtavat

./: .gitignore
viikko1/nhl-statistics/: pyproject.toml
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko1/riippuvuuksien-injektointi/: pyproject.toml
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: player.py
viikko2/varasto/: .pylintrc
viikko3/hello-robot/: pyproject.toml
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/login/: pyproject.toml
viikko3/login/src/: AppLibrary.py  index.py
viikko3/login/src/tests/: login.robot  resource.robot
viikko3/webcounter/: pyproject.toml  run_robot_tests.sh
viikko3/webcounter/.github/workflows/: main.yaml
viikko3/webcounter/src/: app.py  counter.py
viikko3/webcounter/src/templates/: index.html
viikko3/webcounter/src/tests/: increment.robot  resource.robot
viikko4/maksukortti-mock/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py  maksukortti.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: pyproject.toml
viikko4/tdd-ostoskori/: pyproject.toml
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/: index.py  kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/: pyproject.toml
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/: pyproject.toml
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/: pyproject.toml
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/: pyproject.toml
